--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -164,7 +164,7 @@ We will thus be considering both cross validated accuracies, and \emph{train} ac
 
 
 \paragraph{Refolding?}
-The standard practice in neuroimaging is to refold the data after each permutation.
+The standard practice in neuroimaging is to refold the data after each permutation \citep{pereira_machine_2009}.
 This is imperative if permuting labels while aiming at balanced data folds. 
 This is not, however, imperative in general. 
 For simplicity, we will adhere to the standard practice of refolding the data within each permutation.
