--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -12,6 +12,19 @@
   file = {Benjamini_Hochberg_1995_Controlling the false discovery rate.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/D5FV8QSI/Benjamini_Hochberg_1995_Controlling the false discovery rate.pdf:application/pdf;Controlling the False Discovery Rate\: A Practical and Powerful Approach to Multiple Testing:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DDUCV4K7/2346101.html:text/html}
 }
 
+@book{vaart_asymptotic_1998,
+  address = {Cambridge, UK ; New York, NY, USA},
+  title = {Asymptotic {{Statistics}}},
+  isbn = {978-0-521-49603-2},
+  abstract = {Here is a practical and mathematically rigorous introduction to the field of asymptotic statistics. In addition to most of the standard topics of an asymptotics course--likelihood inference, M-estimation, the theory of asymptotic efficiency, U-statistics, and rank procedures--the book also presents recent research topics such as semiparametric models, the bootstrap, and empirical processes and their applications. The topics are organized from the central idea of approximation by limit experiments, one of the book's unifying themes that mainly entails the local approximation of the classical i.i.d. set up with smooth parameters by location experiments involving a single, normally distributed observation.},
+  language = {English},
+  timestamp = {2014-05-12T07:27:16Z},
+  publisher = {{Cambridge University Press}},
+  author = {{van der Vaart}, A. W.},
+  month = oct,
+  year = {1998}
+}
+
 @article{jimura_analyses_2012,
   series = {Multivoxel pattern analysis and cognitive theories},
   title = {Analyses of regional-average activation and multivoxel pattern information tell complementary stories},
