--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -25,6 +25,23 @@
   year = {1998}
 }
 
+@article{lehmann_parametric_2009,
+  title = {Parametric versus nonparametrics: two alternative methodologies},
+  volume = {21},
+  issn = {1048-5252},
+  shorttitle = {Parametric versus nonparametrics},
+  doi = {10.1080/10485250902842727},
+  abstract = {This article compares parametric and nonparametric approaches to statistical inference. It considers their advantages and disadvantages, and their areas of applicability. Although there is no clear comprehensive conclusion, the article finds that in simple problems in which Wilcoxon type tests and estimators apply, they may be recommended as the methods of choice.},
+  timestamp = {2014-07-29T19:18:14Z},
+  number = {4},
+  urldate = {2012-06-11},
+  journal = {Journal of Nonparametric Statistics},
+  author = {Lehmann, Erich L.},
+  year = {2009},
+  pages = {397--405},
+  file = {Lehmann_2009_Parametric versus nonparametrics.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TUM867X9/Lehmann_2009_Parametric versus nonparametrics.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/VZ6JRE7S/10485250902842727.html:text/html}
+}
+
 @article{jimura_analyses_2012,
   series = {Multivoxel pattern analysis and cognitive theories},
   title = {Analyses of regional-average activation and multivoxel pattern information tell complementary stories},
