--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -292,7 +292,7 @@ Simulation code available at [TODO].}
 \label{sec:power}
 
 Having established that all of the tests in our battery control the false positive rate, it remains to be seen if they have similar power; 
-Especially,when comparing the power of the location tests to the accuracy tests. 
+Especially when comparing the power of location tests to accuracy tests. 
 The theoretical results of \cite{ramdas_classification_2016} suggest that power should be of the same order. 
 On the other hand, the results of our previous sections suggest that the conservativeness of some of the considered tests can be considerable, rendering them underpowered. 
 
