--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -556,21 +556,40 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 \caption{\footnotesize [TODO].}	
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-  	  \missingfigure[figwidth=6cm]{TODO}
-%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
-	  \caption{n=400}  %TODO
+	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05zoom"}
+	  \caption{n=40, zoom}  %TODO
+%	\label{fig:2016-07-2721:21:12}
+	\end{subfigure}%
+	\begin{subfigure}{.5\textwidth}
+	  \centering
+	  \includegraphics[width=1\linewidth]{"art/2016-08-04 13:59:33zoom"}
+	  \caption{n=400, zoom} %TODO
+%	\label{fig:2016-07-2721:21:12}
+	\end{subfigure}
+\end{figure}
+
+
+
+
+\begin{figure}[h]
+\centering
+%\label{fig:simulation_1}
+\caption{\footnotesize [TODO].}	
+	\begin{subfigure}{.5\textwidth}
+	  \centering
+	  	  \missingfigure[figwidth=6cm]{TODO}
+%	  \includegraphics[width=1\linewidth]{"art/2016-08-04 13:59:33"}
+	  \caption{n=400, smaller effects}  %TODO
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
-	  \caption{?} %TODO
+	  \caption{n=400, smaller effect, zoom} %TODO
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}
 \end{figure}
-
-
 
 
 
