--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -512,8 +512,7 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 \caption{\footnotesize [TODO].}	
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-  	  \missingfigure[figwidth=6cm]{TODO}
-%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
+	  \includegraphics[width=1\linewidth]{"art/2016-07-30 10:33:05"}
 	  \caption{Scale Change.}  %TODO
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}%
@@ -578,7 +577,7 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  	  \missingfigure[figwidth=6cm]{TODO}
-%	  \includegraphics[width=1\linewidth]{"art/2016-08-04 13:59:33"}
+%  \includegraphics[width=1\linewidth]{"art/2016-08-04 13:59:33"}
 	  \caption{n=400, smaller effects}  %TODO
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}%
